--- a/cds_journey_app_webview_true_url_both.json
+++ b/cds_journey_app_webview_true_url_both.json
@@ -1,7 +1,7 @@
 {
   "url": "https://spidycds.netlify.app/new",
   "selectionway_url": "https://vipcds.netlify.app",
-  "dashboard_url": "https://example.com/dashboard",
+  "vidyakul_url": "https://example.com/dashboard",
   "offers_url": "https://example.com/offers",
   "profile_url": "https://example.com/profile",
 
