--- a/cds_journey_app_webview_true_url_both.json
+++ b/cds_journey_app_webview_true_url_both.json
@@ -1,6 +1,6 @@
 {
   "url": "https://spidycds.netlify.app/new",
-  "selectionway_url": "https://vipcds.netlify.app",
+  "selectionway_url": "https://xcds.netlify.app/",
   "vidyakul_url": "none",
   "offers_url": "https://example.com/offers",
   "profile_url": "https://example.com/profile",
