--- a/cds_journey_app_webview_true_url_both.json
+++ b/cds_journey_app_webview_true_url_both.json
@@ -1,5 +1,5 @@
 {
-  "url": "http://vipcds.netlify.app",
+  "url": "http://Spidyway.vercel.app",
   "selectionway_url": "https://xcds.netlify.app/",
   "vidyakul_url": "none",
   "offers_url": "https://example.com/offers",
